--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 				</section>
 				
 				<section>
+					<h3>The Internet conceived as a Political Space</h3>
 					<p> Upside: The Internet is a big database.</p>
 					<p> Downside: This database is very unstructured. </p>
 				</section>
